# qacg

./: AUTHORS  LICENSE  README  qacg.cabal
diagrams/karatsuba/: Makefile  TODO  karatsuba.tex
docs/presentation/: Makefile  qacg.tex
docs/presentation/diagrams/: 4BitRippleAdderCtrl.eps  kara.eps  multCtrlAdd.eps
src/: qacg.hs
src/CircGen/Add/: CarrySelect.hs  ConditionalSum.hs  Ripple.hs  SimpleRipple.hs
src/CircGen/Bit/: And.hs  BitwiseOP.hs  Compare.hs  Equal.hs  LeftShift.hs  MCToff.hs  Shift.hs  Toffoli.hs
src/CircGen/Div/: SimpleInt.hs
src/CircGen/Mult/: Karatsuba.hs  PartialProduct.hs  SimpleMult.hs  SimpleMultAlt.hs  Wallace.hs
src/CircUtils/: Circuit.hs  CircuitState.hs  CircuitToXML.hs  QacgBool.hs  simCirc.hs
src/QACG/: CircLib.hs  qacg.sty
src/QACG/CircGen/: Cordic.hs  Misc.hs
src/QACG/CircGen/Add/: RippleSub.hs  SimpleRipple.hs
src/QACG/CircGen/Bit/: BitwiseOP.hs  Equal.hs  MCToff.hs  Shift.hs  Toffoli.hs
src/QACG/CircGen/Comp/: Ripple.hs
src/QACG/CircGen/Div/: SimpleInt.hs
src/QACG/CircGen/Mult/: Karatsubanew.hs  RippleMultiplier.hs  SimpleMult.hs  kara3.hs
src/QACG/CircGen/TestCircs/: CS.hs
src/QACG/CircGen/mod/: Reduct.hs
src/QACG/CircUtils/: Circuit.hs  CircuitState.hs  CircuitToXML.hs  QacgBool.hs  QacgBoolOld.hs  QacgBoolTest.hs
src/qacgUtil/: qacg.hs
