Name:                qacg
Version:             0.0
Description:         Quantum Arithmetic Circuit Generation
license:             BSD3
License-file:        LICENSE
Author:              Alex Parent
Maintainer:          alexparent@gmail.com
homepage:            https://github.com/aparent/qacg 
bug-reports:         https://github.com/aparent/qacg/issues
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable qacg
  Main-is:           qacg.hs
  Build-Depends:     base, directory, hxt, data-memocombinators, mtl
  hs-source-dirs:    src/
  ghc-options:       -O1 -Wall
