Name:                QACG
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
Description:         Quantum Arithmetic Circuit Generation
license:             BSD3
License-file:        LICENSE
Author:              Alex Parent
Maintainer:          alexparent@gmail.com
homepage:            https://github.com/aparent/qacg 
bug-reports:         https://github.com/aparent/qacg/issues
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Build-Depends:     base, hxt, data-memocombinators, mtl
  hs-source-dirs:    src/
  Exposed-modules:   QACG.CircUtils.Circuit, QACG.CircUtils.CircuitToXML
                     ,QACG.CircGen.Mult.SimpleMult, QACG.CircGen.Add.SimpleRipple
                     ,QACG.CircGen.Bit.Shift, QACG.CircGen.Bit.BitwiseOP
  ghc-options:       -Wall

Executable qacg
  hs-source-dirs:    src/qacgUtil
  Main-is:           qacg.hs
  Build-Depends:     base, directory, mtl, hxt, process, QACG
  hs-source-dirs:    src/
  ghc-options:       -Wall
